syntax = "proto3";

package resources.jobs;

import "resources/timestamp/timestamp.proto";
import "resources/users/users.proto";
import "validate/validate.proto";

option go_package = "github.com/galexrt/fivenet/gen/go/proto/resources/jobs;jobs";

enum CONDUCT_TYPE {
  NEUTRAL = 0;
  POSITIVE = 1;
  NEGATIVE = 2;
  WARNING = 3;
  SUSPENSION = 4;
}

message ConductEntry {
  uint64 id = 1; // @gotags: sql:"primary_key" alias:"id"
  optional resources.timestamp.Timestamp created_at = 2;
  optional resources.timestamp.Timestamp updated_at = 3;
  string job = 4 [(validate.rules).string.max_len = 20];
  CONDUCT_TYPE type = 5 [(validate.rules).enum.defined_only = true];
  string message = 6 [(validate.rules).string = {min_len: 3, max_len: 2048}];
  optional resources.timestamp.Timestamp expires_at = 7;
  int32 target_user_id = 8 [(validate.rules).int32.gt = 0];
  optional resources.users.UserShort target_user = 9; // @gotags: alias:"target_user"
  int32 creator_id = 10 [(validate.rules).int32.gt = 0];
  optional resources.users.UserShort creator = 11; // @gotags: alias:"creator"
}
